fix: team doc
