# apps/backend/storage/api-docs/api-docs.json
@@ -685,6 +685,18 @@
                                         "type": "string",
                                         "example": "09000000000"
                                     },
+                                    "accessUserIds": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "accessTeamIds": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
                                     "chatId": {
                                         "description": "For Telegram type",
                                         "type": "string"
@@ -696,10 +708,6 @@
                                     "botToken": {
                                         "description": "For Telegram type",
                                         "type": "string"
-                                    },
-                                    "isPublic": {
-                                        "type": "boolean",
-                                        "default": false
                                     },
                                     "steps": {
                                         "description": "For flow type - array of steps with wait and endpoint types",
@@ -930,6 +938,18 @@
                                         "type": "string",
                                         "example": "09000000000"
                                     },
+                                    "accessUserIds": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "accessTeamIds": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
                                     "chatId": {
                                         "description": "For Telegram type",
                                         "type": "string"
@@ -941,10 +961,6 @@
                                     "botToken": {
                                         "description": "For Telegram type",
                                         "type": "string"
-                                    },
-                                    "isPublic": {
-                                        "type": "boolean",
-                                        "default": false
                                     },
                                     "steps": {
                                         "description": "For flow type - array of steps with wait and endpoint types",
@@ -1124,6 +1140,240 @@
                     }
                 ]
             }
+        },
+        "/api/v1/team": {
+            "get": {
+                "tags": [
+                    "Teams"
+                ],
+                "summary": "Get list of teams",
+                "operationId": "getTeams",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer",
+                            "default": 25
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of teams",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Team"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Data Sources"
+                ],
+                "summary": "Create new team",
+                "operationId": "createTeam",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "type",
+                                    "url"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Customer Service"
+                                    },
+                                    "ownerId": {
+                                        "type": "string"
+                                    },
+                                    "userIds": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Team created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Team"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/team/{id}": {
+            "get": {
+                "tags": [
+                    "Data Sources"
+                ],
+                "summary": "Get team by ID",
+                "operationId": "getTeam",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Team details",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Team"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Data Sources"
+                ],
+                "summary": "Update team",
+                "operationId": "updateTeam",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TeamInput"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Team updated"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Data Sources"
+                ],
+                "summary": "Delete team",
+                "operationId": "deleteTeam",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Team deleted"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -1216,6 +1466,18 @@
                         "description": "Primary value (phone number, email address, etc.) - used for most types except telegram and flow",
                         "type": "string"
                     },
+                    "accessUserIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "accessTeamIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
                     "chatId": {
                         "description": "Chat ID for telegram type endpoints",
                         "type": "string"
@@ -1269,10 +1531,6 @@
                         "description": "User ID who owns this endpoint",
                         "type": "string"
                     },
-                    "isPublic": {
-                        "description": "Whether this endpoint is publicly available",
-                        "type": "boolean"
-                    },
                     "createdAt": {
                         "description": "Creation timestamp",
                         "type": "string",
@@ -1289,9 +1547,10 @@
                     "id": "680d668e20f7ecb5bc026722",
                     "name": "My SMS Endpoint",
                     "type": "sms",
+                    "accessTeamIds": [],
+                    "accessUserIds": [],
                     "value": "09000000000",
                     "userId": "userId",
-                    "isPublic": false,
                     "createdAt": "2024-01-01T10:00:00Z",
                     "updatedAt": "2024-01-01T10:00:00Z"
                 }
@@ -1324,6 +1583,18 @@
                         "description": "Primary value (phone number, email address, etc.) - required for most types",
                         "type": "string"
                     },
+                    "accessUserIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "accessTeamIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
                     "chatId": {
                         "description": "Chat ID for telegram type endpoints",
                         "type": "string"
@@ -1335,10 +1606,6 @@
                     "botToken": {
                         "description": "Bot token for telegram type endpoints",
                         "type": "string"
-                    },
-                    "isPublic": {
-                        "description": "Whether this endpoint is publicly available",
-                        "type": "boolean"
                     },
                     "steps": {
                         "description": "Steps array for flow type endpoints",
@@ -1379,6 +1646,56 @@
                     }
                 },
                 "type": "object"
+            },
+            "Team": {
+                "properties": {
+                    "id": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "ownerId": {
+                        "type": "string"
+                    },
+                    "userIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "createdAt": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updatedAt": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
+            "TeamInput": {
+                "required": [
+                    "name",
+                    "type",
+                    "url"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "ownerId": {
+                        "type": "string"
+                    },
+                    "userIds": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
@@ -1402,6 +1719,10 @@
         {
             "name": "Endpoints",
             "description": "Manage notification endpoints (SMS, Email, Telegram, Teams, etc.)"
+        },
+        {
+            "name": "Teams",
+            "description": "Manage Teams"
         }
     ]
 }
